<resources>
    <string name="app_name">Disney App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- User -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">You do not have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="logging">Logging…</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_account">Do you already have an account?</string>
    <string name="log_in_here">log in here</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="registering">Registering…</string>
    <string name="ok">OK</string>

    <!-- Home -->
    <string name="movies">Movies</string>
    <string name="movies_description">Explora las peliculas que Disney App tiene para ti!!!</string>
    <string name="characters">Characters</string>
    <string name="characters_description">Explora los personajes que Disney App tiene para ti!!!</string>
</resources>